# ChangeLog for dev-java/maven-profile
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  21 Oct 2007; kiorky <kiorky@cryptelium.net>
  maven-profile-2.1_pre20071021.ebuild:
  fix DEPENDS

  21 Oct 2007; kiorky <kiorky@cryptelium.net> ++:
  -m bumped but i keep last version to be sure, waiting for the whole beast to
  be recompiled one time entirely

  11 Jun 2007; kiorky <kiorky@cryptelium.net> -maven-profile-2.0.ebuild,
  +maven-profile-2.1_pre20070611.ebuild:
  Maven 2.1 Bump

  02 Jun 2007; kiorky <kiorky@cryptelium.net> maven-profile-2.0.ebuild:
  moving to JAVA_MAVEN_CLASSPATH

  29 May 2007; kiorky <kiorky@cryptelium.net> maven-profile-2.0.ebuild:
  Adding maven bootstrap flag

  19 May 2007; Alistair John Bush <ali_bush@gentoo.org>
  maven-profile-2.0.ebuild:
  Adding to ~amd64, Restricted tests

  01 May 2007; kiorky <kiorky@cryptelium.net> +maven-profile-2.0.6.ebuild,
  +metadata.xml:
  Added as a maven dependency, #177488
