@@ -3,6 +3,6 @@ DIST maven-profile-2.1_pre20070611.tar.bz2 10110 RMD160 fb193efaea669d34484af456
 DIST maven-profile-2.1_pre20071021-gen-src.tar.bz2 9376 RMD160 9f45c4e05c8fd23aabf01ababb0989449f8b2a1b SHA1 dd9aeac03b798d0d6eb8e14b51270a54444f3883 SHA256 4cdce90fb9fa12d7ab407fa82e47e1d9ac0875fe518f3f48a7ef2fa8990f6cb7
 DIST maven-profile-2.1_pre20071021.tar.bz2 10302 RMD160 ba4c6c972f1765d46e9ea2e21d941ac7c5865d33 SHA1 e4e0f99c42e6ecced2e074c6a8baa3fb9c4b6878 SHA256 2c22891742ee732fcd77003164497c9bb41ab954c5d76fff3ea9f51c754c05b1
 EBUILD maven-profile-2.1_pre20070611.ebuild 761 RMD160 eaac85e3fe44ccac17b606a579cef291dc6d44e0 SHA1 b0ceadd800fc257a45bcde10032a94bc84f23bce SHA256 cd5a58da2bbb13b3a167aa16ed86c2ec1bd24a6cba74cebb3a3631c913b21687
-EBUILD maven-profile-2.1_pre20071021.ebuild 832 RMD160 ea5a7be1e50ed0b86e65d60c3f4f58a150c9cc6d SHA1 28915a4c4fab3605873cdacb68c2fe267448e3b5 SHA256 ace34c09a338146543eec451205c882ee50537af3aea4f26423b867caa17ebc6
-MISC ChangeLog 983 RMD160 7c927d84d354272ff402f9b2b6c6486a16c6b98a SHA1 d200961bd54378d5f1bd7ad226450c7ec922e33a SHA256 a26409cd67559dc155bbc2ae1ad63e3a9e6f796fa206bfa46dbf34a923bfe3a8
+EBUILD maven-profile-2.1_pre20071021.ebuild 908 RMD160 6d75e24838817237217b8ac76acff20d91659e6f SHA1 f099e3be37a8cd3bd6640bbff23069e049116804 SHA256 484ffe489863186e3a848e82374b83c3a5e7d2c3e1a6c05e3e9b5d33c54d743f
+MISC ChangeLog 1084 RMD160 beb417a0f34728fc89751f01b5b87c61a7bdef13 SHA1 e041acd735152beae94b4dcef02601fed1548522 SHA256 e922fa0ed6da98dcdaae9e68a5f75faa65a51b2c44a4e877ace1f6c6c25e5c4a
 MISC metadata.xml 157 RMD160 ab0b3741457dee7531f59c4da0f0e9e8399af084 SHA1 c37a6b9922aef61b5b3387655bccb6e3b16e0e26 SHA256 295d02c5805b0257938eb80314b371daac94b8d6ea85629a902de7a824adc0c9
